# AD-Sensor-Project

./: .gitignore  AlzheimerResearch.py  Dockerfile  Firtst_GUI.py  LED.py  LED_GUI.py  Main_window.py  Personal_GUI.py  Photography_window.py  README.md  Second_GUI.py  _1_Personal_GUI.py  _2_Photography_window.py  _cap_pics.py  _main.py  camera.py  content.txt  main.py  personal_data_setup.py  pyproject.toml  test.py  widger_helper.py  window_setup.py
LED_V2/: LED_V2.ino
arduino/: LED.ino
data/: .gitignore  xgb_face_asym_model.json
pages/: analysis_report_window.py  patient_data_form.py  patient_data_form_style.py  pic_caping_window.py
test_util/: connect_arduino.py
ui/pages/: analysis_report_window.py  patient_data_form.py  pic_caping_window.py
ui/styles/: analysis_report_window_style.py  patient_data_form_style.py  pic_caping_window_style.py
utils/: analysis_pic.py  cap_pic.py  led_controller.py  predict_questionaire.py
