[project]
name = "ad-sensor-project"
version = "0.1.0"
description = ""
authors = [
    {name = "a7266165",email = "M123020018@student.nsysu.edu.tw"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pyrealsense2 (>=2.55.1.6486,<3.0.0.0)",
    "serial (>=0.0.97,<0.0.98)",
    "pyqt6 (>=6.9.0,<7.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "pyserial (>=3.5,<4.0)",
    "xgboost (>=3.0.2,<4.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "mediapipe (>=0.10.21,<0.11.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
